--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-es">
+<html lang="es">
 <head>
 <!-- basic -->
 <meta charset="utf-8">
@@ -50,8 +50,10 @@
             <div class="topbar-left">
               <ul class="list-inline">
                 <li> <span class="topbar-label"><i class="fa  fa-home"></i></span> <span class="topbar-hightlight">Inicio</span> </li>
-                <li> <span class="topbar-label"><i class="fa fa-envelope-o"></i></span> <span class="topbar-hightlight"><a href="bracagmail@gmail.com">bracagmail@.com</a></span> </li>
-              </ul>
+                <li> <span class="topbar-label"><i class="fa fa-envelope-o"></i></span> 
+                  <span class="topbar-hightlight"><a href="mailto:techsolutiononcall@gmail.com">techsolutiononcall@gmail.com</a></span> 
+                </li>
+                </ul>
             </div>
           </div>
         </div>
@@ -59,7 +61,7 @@
             </div>
           </div>
           <div class="float-right">
-            <div class="make_appo"> <a class="btn white_btn" href="make_appointment.html">AGENDAR CITA</a> </div>
+            <div class="make_appo"> <a class="btn white_btn" href="simple_form.php">AGENDAR CITA</a> </div>
           </div>
         </div>
       </div>
@@ -78,32 +80,17 @@
         <div class="col-lg-9 col-md-10 col-sm-12 col-xs-12">
           <!-- menu start -->
           <div class="menu_side" >
-            <div id="navbar_menu" class="">
-              <ul class="first-ul">
-                <li> <a class="active" href="index.html">Inicio</a>
-                  <ul>
-                    <li><a href="it_home.html">Pagina principal</a></li>
-                    <li><a href="it_home_dark.html">Pagina modo oscuro</a></li>
-                  </ul>
-                </li>
-                <li><a href="it_about.html">Acerca de</a></li>
-                <li> <a href="it_service.html">Servicios</a>
-                  <ul>
-                    <li><a href="it_service_list.html">Lista de servicios</a></li>
-                    <li><a href="it_service_detail.html">Detalles de servicios</a></li>
-                  </ul>
-                </li>
-                </li>
-                <li> <a href="it_contact.html">Contactos</a>
-                  <ul>
-                    <li><a href="it_contact.html">Contactanos</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-            <div class="search_icon">
-              <ul>
-                <li><a href="#" data-toggle="modal" data-target="#search_bar"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+              <div id="navbar_menu" class="">
+                <ul class="first-ul">
+                  <li><a class="active" href="index.html">Inicio</a></li>
+                  <li><a href="acerca.html">Acerca de</a></li> <!-- Crear una página aparte -->
+                  <li><a href="#">Servicios</a>
+                    <ul>
+                        <li><a href="servicios_lista.html">Lista de servicios</a></li> <!-- Nueva página para lista -->
+                        <li><a href="servicios_detalles.html">Detalles de servicios</a></li> <!-- Nueva página para detalles -->
+                    </ul>
+                  </li>
+                  <li><a href="simple_form.php">Contactos</a></li>
               </ul>
             </div>
           </div>
@@ -471,7 +458,7 @@
         <div class="full">
           <div class="main_heading text_align_left">
             <h2>Proceso de servicio</h2>
-            <p class="large">hemos diseñado un proceso de servicio eficiente y transparente para asegurarnos <p class="large">de que la recuperación de tus datos sea rápida</p>
+            <p class="large">Hemos diseñado un proceso de servicio eficiente y transparente para asegurarnos de que la recuperación de tus datos sea rápida.</p>
           </div>
         </div>
       </div>
@@ -482,7 +469,7 @@
           <div class="col-md-4">
             <div class="full">
               <div class="service_blog_inner">
-                <div class="icon text_align_left"><img src="images/it_service/si1.png" alt="#" /></div>
+                <div class="icon text_align_left"><img src="images/it_service/si1.png" alt="Icono de servicio rápido" /></div>
                 <h4 class="service-heading">Servicio rápido</h4>
                 <p>Ofrecemos un servicio rápido para asegurar que tus datos sean recuperados lo más pronto posible sin comprometer la calidad y la seguridad del proceso.</p>
               </div>
@@ -636,12 +623,10 @@
               <h2>links adicionales</h2>
             </div>
             <ul class="footer-menu">
-              <li><a href="it_about.html"><i class="fa fa-angle-right"></i> Acerca de Nosotros</a></li>
+              <li><a href="index.html"><i class="fa fa-angle-right"></i> Acerca de Nosotros</a></li>
               <li><a href="it_term_condition.html"><i class="fa fa-angle-right"></i>Términos y condiciones</a></li>
               <li><a href="it_privacy_policy.html"><i class="fa fa-angle-right"></i> Política de privacidad</a></li>
-              <li><a href="it_contact.html"><i class="fa fa-angle-right"></i> Contáctanos</a></li>
-            </ul>
-            </ul>
+              <li><a href="make_appointment.html"><i class="fa fa-angle-right"></i> Contáctanos</a></li>
             </ul>
           </div>
           <div class="col-md-6">
@@ -661,7 +646,7 @@
             <div class="main-heading left_text">
               <h2>Contáctanos</h2>
             </div>
-            <p>el triangulo<br><br>
+            <p>El triángulo<br><br>
               <span style="font-size:18px;"><a href="tel:+9876543210">+57 3123132821</a></span></p>
             <div class="footer_mail-section">
           <div class="col-md-6">
